--- a/CST339-CLCMilestoneProject/src/main/resources/templates/my-profile.html
+++ b/CST339-CLCMilestoneProject/src/main/resources/templates/my-profile.html
@@ -87,7 +87,7 @@
 					<div class="row" th:if="${posts.empty}">
 						<h4 style="text-align:center" colspan="4">No Posts Exist.</h4>
 					</div>
-					<div id="PostsTimeline">
+					<div id="PostsTimeline" th:if="${!posts.empty}">
 						<div th:each="post : ${posts}">
 							<section class="Post" >
 								<section class="PostDetails">
@@ -97,7 +97,7 @@
 								<section class="PostCaption">							
 									<div class="Caption bordered">
 										<span th:text="${post.getCaption()}"></span>
-										<a th:href="@{post/editPost?postId={postId}(postId=${post.id})}"class="btn">
+										<a th:href="@{/post/editPost?postId={postId}(postId=${post.id})}"class="btn">
 											<i class="fa-regular fa-pen-to-square" style="height:80%; width: auto;"></i>
 										</a>
 									</div>											
